syntax = "proto3";

package proto;

message User {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
}

message Id {
  int64 id = 1;
}

service UserService {
    rpc GetUser(Id) returns (User);
}